# Scrapedin

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE.md  README.md  example.py  pyproject.toml  requirements.txt  scrapedin.py  setup.py
.github/: main.yml
.github/workflows/: main.yml
Scrapedin/: __init__.py  common_imports.py  data_preprocessing.py  driver.py  job_listing.py  linkedin_scraper.py
scrapedin/: __init__.py
scrapedin/configurations/: __init__.py  common_imports.py  driver.py  linkedin_login.py
scrapedin/jobscraper/: __init__.py  data_preprocessing.py  job_listing.py  linkedin_job_scraper.py  testing.py
src/: __init__.py
src/config/: __init__.py  common_imports.py  config.py  path_config.py
src/configurations/: __init__.py  common_imports.py  config.py  driver.py  driver_manager.py  file_manager.py  linkedin_login.py  logger_manager.py  path_manager.py
src/decorators/: benchmarking.py  logging.py
src/jobscraper/: csv_handler.py  data_preprocessing.py  job_listing.py  linkedin_job_scraper.py
src/managers/: csv_handler.py  driver_manager.py  linkedin_login.py  logger_manager.py
src/scrapedin/: __init__.py
src/scrapedin/config/: common_imports.py  path_config.py
src/scrapedin/decorators/: benchmarking.py  logging.py
src/scrapedin/jobscraper/: __init__.py  job_listing.py  linkedin_job_scraper.py
src/scrapedin/managers/: csv_handler.py  linkedin_login.py  logger_manager.py
src/scrapedin/utils/: cookies.py
src/utils/: benchmarking_utils.py  cookies.py  file_operations.py  logging_utils.py
